# command-center

./: .gitignore  CLAUDE.md  Makefile  README.md  discord-temp-utility.md  gmail_todo.md  package-lock.json  pyproject.toml  setup.py  start.py
.claude/: launch.json
CardQL/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run
CardQL/docs/: ARCHITECTURE.md  CONFIG.md  IMAP_SETUP.md  LLM_QUERY.md  PDF_PARSING.md  USER_GUIDE.md
CardQL/docs/sample/: README.md  card_rules.json  secrets.json  tags.json
CardQL/src/cardql/: config.py  paths.py
CardQL/src/cardql/cli/: helpers.py  main.py  pipeline.py
CardQL/src/cardql/export/: __init__.py  csv.py  sqlite.py
CardQL/src/cardql/ingest/: __init__.py  imap.py  normalize.py  pdf.py
CardQL/src/cardql/parsers/: __init__.py  registry.py  schema.py
CardQL/src/cardql/parsers/banks/: __init__.py  axis_v1.py  hdfc_v1.py  hdfc_v2.py  hsbc_v1.py  icici_v1.py  indusind_v1.py  sbi_v1.py
CardQL/src/cardql/query/: __init__.py  json_extract.py  legacy.py  ollama_setup.py  pipeline.py  schema.py  sql_safety.py
CardQL/src/cardql/ui/: __init__.py  streamlit_app.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dashboard/src/constants/: debt.ts  (+4 more)
docs/: BANK_STATEMENT_PARSING.md  CREDIT_CARDS.md  SETUP_AND_OPERATIONS.md
scripts/: bank_statement_pdf_to_csv.py  configure_tailscale_serve.sh  expose.py  install_systemd_services.sh  migrate_from_excel.py  seed_demo_data.py  setup.py  setup_gmail.py
scripts/launchd/: com.personalfinance.api.plist
scripts/systemd/: finance-api.service  finance-bot.service  finance-dashboard.service
scripts/windows/: register-api-task.ps1
tests/: conftest.py  test_api.py  test_bank_parsers.py  test_bank_statement_pdf.py  test_bank_statement_pdf_password.py  test_bank_statement_text_heuristic.py  test_budget_api.py  test_cc_statement_fetch.py  test_cc_statement_kind.py  test_construction_metrics.py  test_construction_update_pdf.py  test_credit_card_pdf.py  test_credit_card_statement_service.py  test_credit_cards_auto_fetch_repo.py  test_debt_api.py  test_emi_advance.py  test_fy.py  test_goals_income_api.py  test_import_column_mapping.py  test_investment_api.py  test_journal_api.py  test_llm_openai_compat.py  test_merchant_rules_llm.py  test_merchant_rules_matcher.py  test_merchant_rules_migration.py  test_merchant_rules_repo.py  test_merchant_rules_statement_import.py  test_net_worth.py  test_parser.py  test_reports_pdf.py  test_statement_import_api.py  test_statement_import_chart_kinds.py  test_statement_import_fetch_months.py  test_statement_import_service.py  test_statement_import_transactions_crud.py  test_template_line.py  test_transactions_import.py  test_transactions_update.py  test_transfer_nl.py
(+53 files in other folders)
